--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    implementation 'org.mongodb:stitch:3.0.3'
+    implementation 'org.mongodb:stitch:3.0.4'
+
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.+'
 }
